--- a/lead_gen/requirements.txt
+++ b/lead_gen/requirements.txt
@@ -1,4 +1,198 @@
-django==5.1.2
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.4
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2024.12.14
+charset-normalizer==3.4.1
+chromadb==1.0.13
+click==8.2.0
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+dataclasses-json==0.6.7
+debugpy==1.8.1
+decorator==5.1.1
+distlib==0.3.9
+distro==1.9.0
+durationpy==0.10
+exceptiongroup==1.2.0
+executing==2.0.1
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.17.0
+filetype==1.2.0
+flatbuffers==25.2.10
+fonttools==4.55.5
+frozenlist==1.6.0
+fsspec==2024.12.0
+gensim==4.3.3
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+gradio==5.29.0
+gradio_client==1.10.0
+greenlet==3.2.2
+groovy==0.1.2
+grpcio==1.73.1
+grpcio-status==1.73.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.31.1
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+ipykernel==6.29.3
+ipython==8.22.2
+jedi==0.19.1
+Jinja2==3.1.5
+jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+kubernetes==33.1.0
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-core==0.3.63
+langchain-google-genai==2.1.5
+langchain-openai==0.3.18
+langchain-tavily==0.2.0
+langchain-text-splitters==0.3.8
+langgraph==0.4.7
+langgraph-checkpoint==2.0.26
+langgraph-prebuilt==0.2.2
+langgraph-sdk==0.1.70
+langsmith==0.3.43
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.4.4
+mypy==1.16.0
+mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==1.23.5
+oauthlib==3.3.1
+onnxruntime==1.22.0
+openai==1.82.1
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.34.1
+opentelemetry-exporter-otlp-proto-common==1.34.1
+opentelemetry-exporter-otlp-proto-grpc==1.34.1
+opentelemetry-proto==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-semantic-conventions==0.55b1
+orjson==3.10.18
+ormsgpack==1.10.0
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.3
+parso==0.8.3
+pathspec==0.12.1
+pillow==11.1.0
+platformdirs==4.3.6
+posthog==6.0.0
+prompt-toolkit==3.0.43
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==5.9.8
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.1
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.17.2
+pyparsing==3.2.1
+pypdf==5.6.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytube==15.0.0
+pytz==2024.2
+pywin32==306
+PyYAML==6.0.2
+pyzmq==25.1.2
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
-beautifulsoup4==4.12.3
-openai==1.51.2
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.25.1
+rsa==4.9.1
+ruff==0.11.9
+safehttpx==0.1.6
+scipy==1.13.1
+seaborn==0.13.2
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.1.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+stack-data==0.6.3
+starlette==0.46.2
+sympy==1.13.1
+tenacity==9.1.2
+tiktoken==0.9.0
+tokenizers==0.21.2
+tomli==2.2.1
+tomlkit==0.13.2
+torch==2.5.1
+torchvision==0.20.1
+tornado==6.4
+tqdm==4.67.1
+traitlets==5.14.2
+typer==0.15.3
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.1
+ultralytics==8.3.66
+ultralytics-thop==2.0.14
+urllib3==2.3.0
+uvicorn==0.34.2
+virtualenv==20.29.1
+watchfiles==1.1.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.20.0
+yt-dlp==2025.6.9
+zipp==3.23.0
+zstandard==0.23.0
